[gd_scene load_steps=7 format=2]

[ext_resource path="res://Editor/EditorLevelScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Editor/ProjectSelect.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/new_gui/neon.tres" type="Theme" id=3]
[ext_resource path="res://Editor/EditorMain.gd" type="Script" id=4]
[ext_resource path="res://Editor/ui/TileSelector.tscn" type="PackedScene" id=5]
[ext_resource path="res://Editor/ui/navbar.tscn" type="PackedScene" id=6]

[node name="root" type="Node2D"]
script = ExtResource( 4 )

[node name="Node2D" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TileSelector" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_top = -0.799999
margin_bottom = -8.0

[node name="navbar" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = -1.41418
margin_top = 1.41425
margin_right = -1.41418
margin_bottom = 35.4142

[node name="ProjectSelect" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ProjectSelect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -34.0
margin_right = -10.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="CanvasLayer/ProjectSelect/VBoxContainer"]
margin_right = 101.0
margin_bottom = 27.0
text = "New"

[node name="Edit" type="Button" parent="CanvasLayer/ProjectSelect/VBoxContainer"]
margin_top = 31.0
margin_right = 101.0
margin_bottom = 58.0
disabled = true
text = "Edit"

[node name="Delete" type="Button" parent="CanvasLayer/ProjectSelect/VBoxContainer"]
margin_top = 62.0
margin_right = 101.0
margin_bottom = 89.0
disabled = true
text = "Delete"

[node name="Label" type="Label" parent="CanvasLayer/ProjectSelect/VBoxContainer"]
margin_top = 93.0
margin_right = 101.0
margin_bottom = 293.0
rect_min_size = Vector2( 100, 200 )
size_flags_horizontal = 3
size_flags_vertical = 7
autowrap = true
clip_text = true

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/ProjectSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -120.0
margin_bottom = -40.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ProjectSelect/VBoxContainer2"]
margin_right = 864.0
margin_bottom = 40.0
text = "Welcome to Foxy Adventure Level Editor.
Please, select existing project from the list or create new one."
align = 1
valign = 1

[node name="ProjectList" type="ItemList" parent="CanvasLayer/ProjectSelect/VBoxContainer2"]
margin_top = 44.0
margin_right = 864.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="CanvasLayer/ProjectSelect/VBoxContainer/New" to="CanvasLayer/ProjectSelect" method="_on_New_pressed"]
[connection signal="pressed" from="CanvasLayer/ProjectSelect/VBoxContainer/Edit" to="CanvasLayer/ProjectSelect" method="_on_Edit_pressed"]
[connection signal="pressed" from="CanvasLayer/ProjectSelect/VBoxContainer/Delete" to="CanvasLayer/ProjectSelect" method="_on_Delete_pressed"]
[connection signal="item_activated" from="CanvasLayer/ProjectSelect/VBoxContainer2/ProjectList" to="CanvasLayer/ProjectSelect" method="_on_ProjectList_item_activated"]
[connection signal="item_selected" from="CanvasLayer/ProjectSelect/VBoxContainer2/ProjectList" to="CanvasLayer/ProjectSelect" method="_on_ProjectList_item_selected"]
[connection signal="nothing_selected" from="CanvasLayer/ProjectSelect/VBoxContainer2/ProjectList" to="CanvasLayer/ProjectSelect" method="_on_ProjectList_nothing_selected"]
